

if USE_PHP_RUNTIME

noinst_LIBRARIES = libphp_sapi.a

libphp_sapi_a_CFLAGS = \
		-I$(top_srcdir)/src \
		-I$(top_srcdir)/lib/pcre \
		-I$(top_srcdir)/php/main \
		-I$(top_builddir)/php/main \
		-I$(srcdir)/Zend -I$(builddir)/Zend \
		-I$(srcdir)/TSRM -I$(builddir)/TSRM \
		-I$(srcdir)/ext \
		-I$(srcdir)/ext/opcache \
		-I$(srcdir)/ext/fileinfo/libmagic \
		-I$(srcdir)/ext/sqlite3/libsqlite \
		-I$(srcdir)/ext/date/lib -I$(builddir)/ext/date/lib \
		-I$(top_srcdir)/lib/libxml2/include
libphp_sapi_a_LIBADD = \
	$(top_builddir)/lib/tsrm/libtsrm.a \
	$(top_builddir)/lib/pcre/libpcre.a

libphp_sapi_a_SOURCES = \
	sapi/crotalus/php_crotalus.c \
	sapi/crotalus/php_crotalus.h \
	ext/date/php_date.c \
	ext/date/lib/astro.c \
	ext/date/lib/dow.c \
	ext/date/lib/parse_date.c \
	ext/date/lib/parse_tz.c \
	ext/date/lib/timelib.c \
	ext/date/lib/tm2unixtime.c \
	ext/date/lib/unixtime2tm.c \
	ext/date/lib/parse_iso_intervals.c \
	ext/date/lib/interval.c \
	ext/ereg/ereg.c \
	ext/ereg/regex/regcomp.c \
	ext/ereg/regex/regexec.c \
	ext/ereg/regex/regerror.c \
	ext/ereg/regex/regfree.c \
	ext/libxml/libxml.c \
	ext/pcre/php_pcre.c \
	ext/sqlite3/sqlite3.c \
	ext/sqlite3/libsqlite/libsqlite_sqlite3.c \
	ext/ctype/ctype.c \
	ext/dom/php_dom.c \
	ext/dom/attr.c \
	ext/dom/document.c \
	ext/dom/domerrorhandler.c \
	ext/dom/domstringlist.c \
	ext/dom/domexception.c \
	ext/dom/namelist.c \
	ext/dom/processinginstruction.c \
	ext/dom/cdatasection.c \
	ext/dom/documentfragment.c \
	ext/dom/domimplementation.c \
	ext/dom/element.c \
	ext/dom/node.c \
	ext/dom/string_extend.c \
	ext/dom/characterdata.c \
	ext/dom/documenttype.c \
	ext/dom/domimplementationlist.c \
	ext/dom/entity.c \
	ext/dom/nodelist.c \
	ext/dom/text.c \
	ext/dom/comment.c \
	ext/dom/domconfiguration.c \
	ext/dom/domimplementationsource.c \
	ext/dom/entityreference.c \
	ext/dom/notation.c \
	ext/dom/xpath.c \
	ext/dom/dom_iterators.c \
	ext/dom/typeinfo.c \
	ext/dom/domerror.c \
	ext/dom/domlocator.c \
	ext/dom/namednodemap.c \
	ext/dom/userdatahandler.c \
	ext/fileinfo/fileinfo.c \
	ext/fileinfo/libmagic/apprentice.c \
	ext/fileinfo/libmagic/apptype.c \
	ext/fileinfo/libmagic/ascmagic.c \
	ext/fileinfo/libmagic/cdf.c \
	ext/fileinfo/libmagic/cdf_time.c \
	ext/fileinfo/libmagic/compress.c \
	ext/fileinfo/libmagic/encoding.c \
	ext/fileinfo/libmagic/fsmagic.c \
	ext/fileinfo/libmagic/funcs.c \
	ext/fileinfo/libmagic/is_tar.c \
	ext/fileinfo/libmagic/magic.c \
	ext/fileinfo/libmagic/print.c \
	ext/fileinfo/libmagic/readcdf.c \
	ext/fileinfo/libmagic/readelf.c \
	ext/fileinfo/libmagic/softmagic.c \
	ext/filter/ext_filter.c \
	ext/filter/sanitizing_filters.c \
	ext/filter/logical_filters.c \
	ext/filter/callback_filter.c \
	ext/hash/hash.c \
	ext/hash/hash_md.c \
	ext/hash/hash_sha.c \
	ext/hash/hash_ripemd.c \
	ext/hash/hash_haval.c \
	ext/hash/hash_tiger.c \
	ext/hash/hash_gost.c \
	ext/hash/hash_snefru.c \
	ext/hash/hash_whirlpool.c \
	ext/hash/hash_adler32.c \
	ext/hash/hash_crc32.c \
	ext/hash/hash_fnv.c \
	ext/hash/hash_joaat.c \
	ext/iconv/iconv.c \
	ext/json/json.c \
	ext/json/utf8_decode.c \
	ext/json/JSON_parser.c \
	ext/opcache/ZendAccelerator.c \
	ext/opcache/zend_accelerator_blacklist.c \
	ext/opcache/zend_accelerator_debug.c \
	ext/opcache/zend_accelerator_hash.c \
	ext/opcache/zend_accelerator_module.c \
	ext/opcache/zend_persist.c \
	ext/opcache/zend_persist_calc.c \
	ext/opcache/zend_shared_alloc.c \
	ext/opcache/zend_accelerator_util_funcs.c \
	ext/opcache/shared_alloc_shm.c \
	ext/opcache/shared_alloc_mmap.c \
	ext/opcache/shared_alloc_posix.c \
	ext/opcache/Optimizer/zend_optimizer.c \
	ext/opcache/opcache.la \
	ext/pdo/pdo.c \
	ext/pdo/pdo_dbh.c \
	ext/pdo/pdo_stmt.c \
	ext/pdo/pdo_sql_parser.c \
	ext/pdo/pdo_sqlstate.c \
	ext/pdo_sqlite/pdo_sqlite.c \
	ext/pdo_sqlite/sqlite_driver.c \
	ext/pdo_sqlite/sqlite_statement.c \
	ext/phar/util.c \
	ext/phar/tar.c \
	ext/phar/zip.c \
	ext/phar/stream.c \
	ext/phar/func_interceptors.c \
	ext/phar/dirstream.c \
	ext/phar/phar.c \
	ext/phar/phar_object.c \
	ext/phar/phar_path_check.c \
	ext/posix/posix.c \
	ext/reflection/php_reflection.c \
	ext/session/mod_user_class.c \
	ext/session/session.c \
	ext/session/mod_files.c \
	ext/session/mod_mm.c \
	ext/session/mod_user.c \
	ext/simplexml/simplexml.c \
	ext/simplexml/sxe.c \
	ext/spl/php_spl.c \
	ext/spl/spl_functions.c \
	ext/spl/spl_engine.c \
	ext/spl/spl_iterators.c \
	ext/spl/spl_array.c \
	ext/spl/spl_directory.c \
	ext/spl/spl_exceptions.c \
	ext/spl/spl_observer.c \
	ext/spl/spl_dllist.c \
	ext/spl/spl_heap.c \
	ext/spl/spl_fixedarray.c \
	ext/standard/crypt_freesec.c \
	ext/standard/crypt_blowfish.c \
	ext/standard/crypt_sha512.c \
	ext/standard/crypt_sha256.c \
	ext/standard/php_crypt_r.c \
	ext/standard/array.c \
	ext/standard/base64.c \
	ext/standard/password.c \
	ext/standard/basic_functions.c \
	ext/standard/browscap.c \
	ext/standard/crc32.c \
	ext/standard/crypt.c \
	ext/standard/cyr_convert.c \
	ext/standard/datetime.c \
	ext/standard/dir.c \
	ext/standard/dl.c \
	ext/standard/dns.c \
	ext/standard/exec.c \
	ext/standard/file.c \
	ext/standard/filestat.c \
	ext/standard/flock_compat.c \
	ext/standard/formatted_print.c \
	ext/standard/fsock.c \
	ext/standard/head.c \
	ext/standard/html.c \
	ext/standard/image.c \
	ext/standard/info.c \
	ext/standard/iptc.c \
	ext/standard/lcg.c \
	ext/standard/link.c \
	ext/standard/mail.c \
	ext/standard/math.c \
	ext/standard/md5.c \
	ext/standard/metaphone.c \
	ext/standard/microtime.c \
	ext/standard/pack.c \
	ext/standard/pageinfo.c \
	ext/standard/quot_print.c \
	ext/standard/rand.c \
	ext/standard/soundex.c \
	ext/standard/string.c \
	ext/standard/scanf.c \
	ext/standard/syslog.c \
	ext/standard/type.c \
	ext/standard/uniqid.c \
	ext/standard/url.c \
	ext/standard/var.c \
	ext/standard/versioning.c \
	ext/standard/assert.c \
	ext/standard/strnatcmp.c \
	ext/standard/levenshtein.c \
	ext/standard/incomplete_class.c \
	ext/standard/url_scanner_ex.c \
	ext/standard/ftp_fopen_wrapper.c \
	ext/standard/http_fopen_wrapper.c \
	ext/standard/php_fopen_wrapper.c \
	ext/standard/credits.c \
	ext/standard/css.c \
	ext/standard/var_unserializer.c \
	ext/standard/ftok.c \
	ext/standard/sha1.c \
	ext/standard/user_filters.c \
	ext/standard/uuencode.c \
	ext/standard/filters.c \
	ext/standard/proc_open.c \
	ext/standard/streamsfuncs.c \
	ext/standard/http.c \
	ext/tokenizer/tokenizer.c \
	ext/tokenizer/tokenizer_data.c \
	ext/xml/xml.c \
	ext/xml/compat.c \
	ext/xmlreader/php_xmlreader.c \
	ext/xmlwriter/php_xmlwriter.c \
	TSRM/tsrm_win32.c \
	main/main.c \
	main/snprintf.c \
	main/spprintf.c \
	main/php_sprintf.c \
	main/fopen_wrappers.c \
	main/alloca.c \
	main/php_scandir.c \
	main/php_ini.c \
	main/SAPI.c \
	main/rfc1867.c \
	main/php_content_types.c \
	main/strlcpy.c \
	main/strlcat.c \
	main/mergesort.c \
	main/reentrancy.c \
	main/php_variables.c \
	main/php_ticks.c \
	main/network.c \
	main/php_open_temporary_file.c \
	main/output.c \
	main/getopt.c \
	main/streams/streams.c \
	main/streams/cast.c \
	main/streams/memory.c \
	main/streams/filter.c \
	main/streams/plain_wrapper.c \
	main/streams/userspace.c \
	main/streams/transports.c \
	main/streams/xp_socket.c \
	main/streams/mmap.c \
	main/streams/glob_wrapper.c \
	main/internal_functions.c \
	main/internal_functions_cli.c \
	Zend/zend_language_parser.c \
	Zend/zend_language_scanner.c \
	Zend/zend_ini_parser.c \
	Zend/zend_ini_scanner.c \
	Zend/zend_alloc.c \
	Zend/zend_compile.c \
	Zend/zend_constants.c \
	Zend/zend_dynamic_array.c \
	Zend/zend_dtrace.c \
	Zend/zend_execute_API.c \
	Zend/zend_highlight.c \
	Zend/zend_llist.c \
	Zend/zend_vm_opcodes.c \
	Zend/zend_opcode.c \
	Zend/zend_operators.c \
	Zend/zend_ptr_stack.c \
	Zend/zend_stack.c \
	Zend/zend_variables.c \
	Zend/zend.c \
	Zend/zend_API.c \
	Zend/zend_extensions.c \
	Zend/zend_hash.c \
	Zend/zend_list.c \
	Zend/zend_indent.c \
	Zend/zend_builtin_functions.c \
	Zend/zend_sprintf.c \
	Zend/zend_ini.c \
	Zend/zend_qsort.c \
	Zend/zend_multibyte.c \
	Zend/zend_ts_hash.c \
	Zend/zend_stream.c \
	Zend/zend_iterators.c \
	Zend/zend_interfaces.c \
	Zend/zend_exceptions.c \
	Zend/zend_strtod.c \
	Zend/zend_gc.c \
	Zend/zend_closures.c \
	Zend/zend_float.c \
	Zend/zend_string.c \
	Zend/zend_signal.c \
	Zend/zend_generators.c \
	Zend/zend_virtual_cwd.c \
	Zend/zend_ast.c \
	Zend/zend_objects.c \
	Zend/zend_object_handlers.c \
	Zend/zend_objects_API.c \
	Zend/zend_default_classes.c \
	Zend/zend_execute.c

endif



