

noinst_LIBRARIES = libpcre.a
libpcre_a_SOURCES = \
	pcre_chartables.c \
	pcre_compile.c \
	pcre_config.c \
	pcre_exec.c \
	pcre_fullinfo.c \
	pcre_get.c \
	pcre_globals.c \
	pcre.h \
	pcre_internal.h \
	pcre_maketables.c \
	pcre_newline.c \
	pcre_ord2utf8.c \
	pcreposix.c \
	pcreposix.h \
	pcre_refcount.c \
	pcre_study.c \
	pcre_tables.c \
	pcre_ucd.c \
	pcre_valid_utf8.c \
	pcre_version.c \
	pcre_xclass.c \
	ucp.h

